--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -29,3 +29,7 @@ jobs:
       - name: Install Python tests dependencies
         run: |
           pip install -r tests/requirements.txt
+
+      - name: Run test
+        run: |
+          pytest --github-report
