--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -40,3 +40,35 @@ jobs:
           name: the-big-program
           path: |
             ./code/the_big_program.py
+
+  dev-deploy:
+    runs-on: ubuntu-latest
+    environment: development
+    needs: build
+    permissions:
+      id-token: write
+      contents: read
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+
+      - name: Deploy to development
+        run: |
+          echo "Deploying to server: ${{ vars.TARGET_HOST }}
+
+  prod-deploy:
+    runs-on: ubuntu-latest
+    environment: production
+    needs: dev-deploy
+    permissions:
+      id-token: write
+      contents: read
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+
+      - name: Deploy to production
+        run: |
+          echo "Deploying to server: ${{ vars.TARGET_HOST }}
