--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -57,10 +57,26 @@ jobs:
         run: |
           echo "Deploying to server: ${{ vars.TARGET_HOST }}"
 
+  test-deploy:
+    runs-on: ubuntu-latest
+    environment: test
+    needs: build
+    permissions:
+      id-token: write
+      contents: read
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+
+      - name: Deploy to testing
+        run: |
+          echo "Deploying to server: ${{ vars.TARGET_HOST }}"
+
   prod-deploy:
     runs-on: ubuntu-latest
     environment: production
-    needs: dev-deploy
+    needs: test-deploy
     permissions:
       id-token: write
       contents: read
