--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -87,4 +87,4 @@ jobs:
 
       - name: Deploy to production
         run: |
-          echo "Deploying to server: ${{ vars.TARGET_HOST }}" using secret password ${{ secrets.SERVER_PASSWORD }}
+          echo "Deploying to server: ${{ vars.TARGET_HOST }} using secret password ${{ secrets.SERVER_PASSWORD }}"
