--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -11,6 +11,9 @@ jobs:
     permissions:
       id-token: write
       contents: read
+    strategy:
+      matrix:
+        python-versions: ['3.9', '3.10', '3.11']
 
     steps:
       - name: Checkout
@@ -18,7 +21,7 @@ jobs:
 
       - uses: actions/setup-python@v4
         with:
-          python-version: '3.11'
+          python-version: ${{ matrix.python-versions }}
           cache: 'pip'
           cache-dependency-path: pyproject.toml
 
